[metadata]
name = pyqgis_raster_dataframe
version = attr: pyqgis_raster_dataframe.__version__
description = Uses a pandas DataFrame to filter, load, group and style large stacks of raster layers in (PY)QGIS.
author = Florian Roth
author_email = 
long_description = file: README.md
url = https://github.com/fl0roth/pyqgis-raster-dataframe
platforms = any
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
install_requires =
    geopathfinder

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
